<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="115dp"
        android:contentDescription="@string/description"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textColor="@color/font_color"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:text="@string/phone_no"
        android:layout_marginTop="3dp"
        android:textColor="@color/font_color"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
        android:id="@+id/vehicle_no"
        android:layout_marginTop="10dp"
        android:hint="@string/vehicle_no"
        android:inputType="text"
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp"
        android:id="@+id/cx_name"
        android:layout_marginTop="10dp"
        android:hint="@string/cx_name"
        android:inputType="text"
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:layout_marginLeft="50dp"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        android:id="@+id/product"
        android:layout_marginTop="10dp"
        android:text="@string/product_name"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginStart="150dp"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        android:id="@+id/rate"
        android:layout_marginTop="10dp"
        android:hint="@string/rate"
        android:inputType="numberDecimal"
        android:layout_width="110dp"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    <EditText
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp"
        android:id="@+id/rupees"
        android:layout_marginTop="10dp"
        android:hint="@string/rupees"
        android:inputType="numberDecimal"
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp"
        android:id="@+id/liters"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        android:hint="@string/liters"
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/calculate"
        android:id="@+id/calculate"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/print"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="5dp"
        android:text="@string/print"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>